# Geometry

./: CMakeLists.txt
.github/workflows/: testAction.yaml
include/: GeomTools.h  HullTools.h  Line2D.h  LineSegment2D.h  LineTools.h  PlanarRegion.h  Plane3D.h  PoseTrajectory.h  RigidBodyTransform.h  TrajectoryOptimizer.h
src/: GeomTools.cpp  HullTools.cpp  LineTools.cpp
src/Elements/: Line2D.cpp  LineSegment2D.cpp  PlanarRegion.cpp  Plane3D.cpp  PoseTrajectory.cpp  RigidBodyTransform.cpp
src/Optimizers/: TrajectoryOptimizer.cpp
test/: GeometryTests.cpp
